Try fix staging only bug on class picker icon spacing

--- a/frontend/src/components/SideBar/AddGroupTags.module.css
+++ b/frontend/src/components/SideBar/AddGroupTags.module.css
@@ -35,7 +35,7 @@
   top: 5px;
 }
 
-.AddGroupTags p {
+.ClassItem p {
   text-align: left;
   margin-left: 10px;
   font-size: 10px;
